Fix buttons to not overlap toolbar

--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,7 @@ header {
   box-sizing: border-box;
   font-size: 24px;
   transition: background-color 0.15s ease-in, box-shadow 0.15s ease-in;
+  z-index: 100;
 }
 
 .header-bg {
@@ -99,6 +100,7 @@ header {
   display: flex;
   flex-direction: column;
   transition: left 0.4s ease-out;
+  z-index: 110;
 }
 
 .close-btn {
